# rmagine_examples

./: CMakeLists.txt  README.md
include/imagine_examples/: helper.h  models.h
include/rmagine_examples/: helper.h  models.h
src/: example_cpu.cpp  example_cpu_change_map.cpp  example_cpu_change_sim.cpp  example_cpu_custom_model.cpp  example_cpu_o1dn.cpp  example_cpu_ondn.cpp  example_cpu_pinhole.cpp  example_cpu_sphere.cpp  example_gpu_change_map.cpp  example_gpu_custom_model.cpp  example_gpu_o1dn.cpp  example_gpu_ondn.cpp  example_gpu_pinhole.cpp  example_gpu_sphere.cpp  example_math.cpp
